--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -42,6 +42,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
     "eslint": "^9.6.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.34.3"
