--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.24.0",
     "react-scripts": "^5.0.1",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
