--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-#REACT_APP_API_URL=http://api.pingpro.fr/
+#REACT_APP_API_URL=https://api.pingpro.fr/
 REACT_APP_API_URL=http://localhost:3031/
 
 SKIP_PREFLIGHT_CHECK=true
